--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "universidadesfront",
+  "name": "universidades",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
-    "vuetify": "^2.2.11"
+    "vue-perfect-scrollbar": "^0.2.1",
+    "vue-router": "^3.3.4",
+    "vuetify": "^2.3.7",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
