--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11",
     "vue-perfect-scrollbar": "^0.2.1",
     "vue-router": "^3.3.4",
+    "vue-sweetalert2": "^3.0.6",
     "vuetify": "^2.3.7",
     "vuex": "^3.5.1"
   },
