--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-perfect-scrollbar": "^0.2.1",
-    "vue-router": "^3.3.4",
+    "vue-router": "^3.4.3",
     "vue-sweetalert2": "^3.0.6",
-    "vuetify": "^2.3.7",
+    "vuetify": "^2.3.10",
+    "vuetify-vuejs-confirmdialog": "^1.0.0",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
@@ -28,7 +29,7 @@
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.7",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
