--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nprogress": "^0.2.0",
     "vue": "^2.6.12",
     "vue-perfect-scrollbar": "^0.2.1",
+    "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.4.3",
     "vue-sweetalert2": "^3.0.6",
     "vuetify": "^2.3.10",
