--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "highcharts": "^8.2.0",
+    "highcharts-vue": "^1.3.5",
     "nprogress": "^0.2.0",
     "vue": "^2.6.12",
     "vue-perfect-scrollbar": "^0.2.1",
