--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-perfect-scrollbar": "^0.2.1",
     "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.4.3",
