--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "highcharts": "^8.2.0",
+    "highcharts-vue": "^1.3.5",
     "nprogress": "^0.2.0",
+    "pdfmake": "^0.1.68",
     "vue": "^2.6.12",
     "vue-perfect-scrollbar": "^0.2.1",
     "vue-recaptcha": "^1.3.0",
-    "vue-router": "^3.4.3",
-    "vue-sweetalert2": "^3.0.6",
+    "vue-router": "^3.4.4",
+    "vue-sweetalert2": "^3.0.8",
     "vuetify": "^2.3.10",
     "vuetify-vuejs-confirmdialog": "^1.0.0",
     "vuex": "^3.5.1"
@@ -27,7 +30,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.19.0",
+    "sass": "^1.26.11",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.12",
